Fix .fill so whole navbar is visible

--- a/static/bootstrap/css/bootstrap-responsive.css
+++ b/static/bootstrap/css/bootstrap-responsive.css
@@ -9,7 +9,7 @@
  */
 
 .fill {
-    top: 40px;
+    top: 42px;
     left: 0;
     right: 0;
     bottom: 0;
